mutants.out/log/replace_read_parameters_expectations_with_Default__default()_in_src_test_parameters_read_params.rs_21.log

*** replace read_parameters_expectations with Default::default() in src/test/parameters/read_params.rs:21
*** --- src/test/parameters/read_params.rs
+++ replace read_parameters_expectations with Default::default()
@@ -14,43 +14,17 @@
 struct ReadParameterExpectations {
     serial: Serial<u8>,
     aux: Generic<PinTransaction>,
     m0: Generic<PinTransaction>,
     m1: Generic<PinTransaction>,
 }
 
 fn read_parameters_expectations(parameters: &Parameters) -> ReadParameterExpectations {
-    let bytes = parameters.to_bytes();
-    let serial = Serial::<u8>::new(&[
-        SerialTransaction::write(0xC1),
-        SerialTransaction::write(0xC1),
-        SerialTransaction::write(0xC1),
-        SerialTransaction::read(0xC0),
-        SerialTransaction::read(bytes[0]),
-        SerialTransaction::read(bytes[1]),
-        SerialTransaction::read(bytes[2]),
-        SerialTransaction::read(bytes[3]),
-        SerialTransaction::read(bytes[4]),
-    ]);
-    let aux = Pin::new(&vec![
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(High),
-    ]);
-    let m0 = Pin::new(&vec![PinTransaction::set(Low)]);
-    let m1 = Pin::new(&vec![PinTransaction::set(Low)]);
-    ReadParameterExpectations {
-        serial,
-        aux,
-        m0,
-        m1,
-    }
+Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 use proptest::prelude::*;
 proptest! {
     #![proptest_config(ProptestConfig {
         cases: 10000,
         .. ProptestConfig::default()
     })]

*** run /home/rafaelbachmann/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo check --tests
*** cargo result: Exited(101) in 0.251sJFXww7)
warning: unused imports: `High`, `Low`, `Mock as Pin`, `Transaction as SerialTransaction`
  --> src/test/parameters/read_params.rs:6:9
   |
6  |         Mock as Pin,
   |         ^^^^^^^^^^^
7  |         State::{High, Low},
   |                 ^^^^  ^^^
...
10 |     serial::{Mock as Serial, Transaction as SerialTransaction},
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `ReadParameterExpectations: std::default::Default` is not satisfied
  --> src/test/parameters/read_params.rs:22:1
   |
22 | Default::default() /* ~ changed by cargo-mutants ~ */
   | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `ReadParameterExpectations`

For more information about this error, try `rustc --explain E0277`.
warning: `ebyte-e32` (lib test) generated 1 warning
error: could not compile `ebyte-e32` due to previous error; 1 warning emitted
